ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: outgress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: snippy-outgress-ip
spec:
  backend:
    serviceName: app-service
    servicePort: 80
  rules:
  - host: app.snippy.me
    http:
      paths:
      - backend:
          serviceName: app-service
          servicePort: 80
        pathType: ImplementationSpecific
  - host: analytics.snippy.me
    http:
      paths:
      - backend:
          serviceName: analytics-service
          servicePort: 8080
        pathType: ImplementationSpecific
